2005-08-23  Not Zed  <NotZed@Ximian.com>

	* groupwise-account-setup.c (org_gnome_groupwise_account_setup):
	def9ine before defining.

	* camel-gw-listener.c (account_added): fix warning.

2005-07-27  Sankar P  <psankar@novell.com>

	* camel-gw-listener.c (get_addressbook_names_from_server) :
	Added code to get the password from the cache, instead of asking the user twice.	
	and also freeing the password that was leaking before.
	Fixes #310353
	
2005-07-23  Sushma Rai  <rsushma@novell.com>

	* camel-gw-listener.c (add_addressbook_sources): marking 
	"Novell GroupWise Address Book" for offline usage by default. This is
	needed as we now reply from cache always.

2005-07-13  Tor Lillqvist  <tml@novell.com>

	* org-gnome-gw-account-setup.eplug.xml: Use SOEXT.

2005-07-12 Vivek Jain <jvivek@novell.com>
	
	* Makefile.am: included missing header file

2005-07-12 Vivek Jain <jvivek@novell.com>
	
	have a ChangeLog and transfer the changelog entry from the main
	ChangeLog
	(2005-07-10  Shreyas Srinivasan <sshreyas@novell.com>)
	* groupwise-account-setup/*: Make the
	camel-groupwise-listener load on startup. (new plugin)
